<resources>
    <string name="No_cities">No cities</string>
    <string name="Switch">switch</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_clock">About Clock</string>
    <string name="action_bar_save">Save</string>
    <string name="add">Add</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_alarm_in_clock_first">Add an alarm in Clock first.</string>
    <string name="add_alert_background">Add alert background</string>
    <string name="add_city">Add city</string>
    <string name="add_from_phone_tts">Add from phone</string>
    <string name="add_from_tablet_tts">Add from tablet</string>
    <string name="adjust_bedtime_setting">Adjust your bedtime settings</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_Spotify_selected">Spotify</string>
    <string name="alarm_alert_date_format">EEE, d MMM</string>
    <string name="alarm_alert_date_format_for_tts">EEEE, d MMMM</string>
    <string name="alarm_alert_direct_boot_mode">Your phone was restarted and needs to be unlocked to hear the sound you selected for this alarm.</string>
    <string name="alarm_alert_dismiss_swipe_comment">Swipe to dismiss alarm.</string>
    <string name="alarm_alert_instruction_comment">Drag circle to dismiss</string>
    <string name="alarm_alert_spotify_app_not_installed">"Can't play Spotify. App not installed."</string>
    <string name="alarm_alert_spotify_continue_playing_msg">Continue playing</string>
    <string name="alarm_alert_spotify_emergency_error">Ringtone is used instead of Spotify in Emergency mode.</string>
    <string name="alarm_alert_spotify_no_network_msg">"Can't play Spotify. No network connection."</string>
    <string name="alarm_alert_spotify_offline_mode_error">"Can't play Spotify alarm. Spotify is in Offline mode."</string>
    <string name="alarm_alert_spotify_something_went_wrong">"Can't play Spotify. Something went wrong."</string>
    <string name="alarm_alert_spotify_upsm_error">Ringtone is used instead of Spotify in Maximum power saving mode.</string>
    <string name="alarm_bixby_alarm">Bixby alarm</string>
    <string name="alarm_bixby_description">Read out the current time, weather forecast, and news over music as the alarm rings.</string>
    <string name="alarm_bixby_description_chn">Have Bixby read aloud the current time, weather, or other information when your alarm rings. This function needs to use a network connection.</string>
    <string name="alarm_bixby_description_not_include_news">Read out the current time and weather forecast over music as the alarm rings.</string>
    <string name="alarm_cancel_workingday">Alarm repeat canceled for all workdays. Alarm will sound on selected days only.</string>
    <string name="alarm_celeb_voice">Celebrity voice</string>
    <string name="alarm_celeb_voice_description">Wake up to the sound of your favorite voice along with music.</string>
    <string name="alarm_celeb_voice_selected_voice">Selected voice</string>
    <string name="alarm_celebrity_alarm">Celebrity alarm</string>
    <string name="alarm_custom_snooze_box">Custom</string>
    <string name="alarm_custom_sort_order">Custom order</string>
    <string name="alarm_date">Date</string>
    <string name="alarm_date_unable_to_set_today">"Can't set alarms for times in the past. Alarm set for tomorrow."</string>
    <string name="alarm_dont_include_temporary_holidays">"Don't include substitute or temporary holidays"</string>
    <string name="alarm_exist_same">Alarm already set for %s.</string>
    <string name="alarm_exist_update">Alarm already set for %s. Existing alarm updated.</string>
    <string name="alarm_holiday">Disable during public holidays</string>
    <string name="alarm_holiday_description">Disable alarms temporarily when they are set to be repeated during public holidays.</string>
    <string name="alarm_include_temporary_holidays">Include substitute and temporary holidays</string>
    <string name="alarm_item_double_tab_go_to_edit_for_tts">Double tap to edit.</string>
    <string name="alarm_main_alert_alarm_now_ringing">Alarm ringing</string>
    <string name="alarm_main_alert_alarm_will_sound">Alarm will go off soon</string>
    <string name="alarm_main_alert_all_off">All alarms are off</string>
    <string name="alarm_main_alert_hours_minutes">Alarm in %1$d hours %2$d minutes</string>
    <string name="alarm_main_alert_hours_minutes_arabic">Alarm in %1$s %2$s</string>
    <string name="alarm_main_alert_not_ringing_on_holidays_kor">No alarms will ring during holidays</string>
    <string name="alarm_main_alert_not_ringing_on_public_holidays_jp">No alarms will ring during public holidays</string>
    <string name="alarm_main_alert_one_hour_minutes">Alarm in 1 hour %d minutes</string>
    <string name="alarm_main_alert_ringing_only_workdays_chn">Alarms will only ring on workdays</string>
    <string name="alarm_main_alert_snoozed_alarm">Alarm snoozed</string>
    <string name="alarm_notification_during_emergency_call_back_mode">%s alarm will sound after Emergency callback mode is turned off.</string>
    <string name="alarm_notification_smart_collapsed_text_with_name">%1$s, %2$s, and %3$d more</string>
    <string name="alarm_notification_smart_collapsed_text_without_name">%1$s and %2$d more</string>
    <string name="alarm_notification_smart_turn_off">Turn off for today</string>
    <string name="alarm_notification_smart_upcoming">Turn off your upcoming alarm?</string>
    <string name="alarm_notification_smart_upcomings">Turn off your upcoming alarms?</string>
    <string name="alarm_notification_snoozed">Alarm will sound at %s</string>
    <string name="alarm_notification_snoozed_from_full_screen">Alarm will go off at %s.</string>
    <string name="alarm_notification_snoozed_title">%s snoozed</string>
    <string name="alarm_notify_snooze_text">Alarm set for %1$s. Select to cancel</string>
    <string name="alarm_off">Off</string>
    <string name="alarm_on">On</string>
    <string name="alarm_option_expired">%s (expired)</string>
    <string name="alarm_option_expires">%1$s (expires %2$s)</string>
    <string name="alarm_set_date">Set date</string>
    <string name="alarm_set_over_24h">Alarm set for %1$s on %2$s.</string>
    <string name="alarm_set_over_24h_exist">Alarm already set for %1$s on %2$s.</string>
    <string name="alarm_snooze_10min">10 minutes</string>
    <string name="alarm_snooze_15min">15 minutes</string>
    <string name="alarm_snooze_30min">30 minutes</string>
    <string name="alarm_snooze_3times">3 times</string>
    <string name="alarm_snooze_5min">5 minutes</string>
    <string name="alarm_snooze_5times">5 times</string>
    <string name="alarm_snooze_duration">Interval</string>
    <string name="alarm_snooze_infinity">Continuously</string>
    <string name="alarm_snooze_repeat">Repeat</string>
    <string name="alarm_sort">Sort</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="alarm_sound_gradually_increase_volume">Gradually increase volume</string>
    <string name="alarm_sound_mode_jpn">Vibrate for alarms and timers</string>
    <string name="alarm_sound_mode_sub_title_jpn">"Alarms and timers will vibrate if your phone is set to Mute or Vibrate. You'll still hear alarms when your phone is set to Sound."</string>
    <string name="alarm_sound_mode_sub_title_jpn_tablet">"Alarms and timers will vibrate if your tablet is set to Mute or Vibrate. You'll still hear alarms when your tablet is set to Sound."</string>
    <string name="alarm_spotify_description">Wake up with your favorite songs.</string>
    <string name="alarm_time_sort_order">Alarm time order</string>
    <string name="alarm_tone_set_silent">"Can't change volume. Alarm sound is off."</string>
    <string name="alarm_tts">Read time and alarm name aloud</string>
    <string name="alarm_tts_current_time">"It's %1$d:%2$02d"</string>
    <string name="alarm_tts_current_time_am">"It's %1$d:%2$02d AM"</string>
    <string name="alarm_tts_current_time_am_for_arabic">"It's %1$d:%2$02d AM"</string>
    <string name="alarm_tts_current_time_for_arabic">"It's %1$d:%2$02d"</string>
    <string name="alarm_tts_current_time_pm">"It's %1$d:%2$02d PM"</string>
    <string name="alarm_tts_current_time_pm_for_arabic">"It's %1$d:%2$02d PM"</string>
    <string name="alarm_tts_dialog">"The time can't be read aloud in your system language. You can have the time read aloud in %s or select another language in Settings."</string>
    <string name="alarm_tts_dialog_title">Read time aloud in %s?</string>
    <string name="alarm_tts_language_not_support_msg">"Can't read time aloud in current language. Choose a different language in Settings."</string>
    <string name="alarm_tts_language_support_msg">Time will be read aloud in %s</string>
    <string name="alarm_turn_off">Turn off</string>
    <string name="alarm_turn_on">Turn on</string>
    <string name="alarm_update_calendar_go_setting">Tap SETTINGS to go to Calendar settings and update the holiday calendar.</string>
    <string name="alarm_update_calendar_popup_message">"To repeat alarms on workdays, the Chinese holiday calendar needs to be updated. If you don't update it, the alarms may not operate properly."</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bixby_routine_start_stopwatch">Start Stopwatch</string>
    <string name="bixby_routine_start_timer">Start a timer</string>
    <string name="bixby_routine_turn_off">Turn off alarms</string>
    <string name="bixby_routine_turn_on">Turn on alarms</string>
    <string name="clock_24_hours_format">kk:mm</string>
    <string name="fri1">F</string>
    <string name="main_widget_12_hours_format">h:mm</string>
    <string name="mon1">M</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_regular">sec-roboto-light</string>
    <string name="sat1">S</string>
    <string name="snooze">Snooze</string>
    <string name="sun1">S</string>
    <string name="thu1">T</string>
    <string name="tue1">T</string>
    <string name="wed1">W</string>
</resources>