<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextClock android:textSize="@dimen/alarm_current_time_text_size" android:textStyle="normal" android:textColor="@color/alert_text_time_date_color" android:gravity="center_horizontal" android:id="@id/alarm_alert_current_time" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:includeFontPadding="false" android:fontFamily="@string/roboto_light" android:format12Hour="@string/main_widget_12_hours_format" android:format24Hour="@string/clock_24_hours_format" app:layout_constraintBottom_toTopOf="@id/alarm_current_date_layout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <RelativeLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/alarm_current_date_layout" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/alarm_margin_current_date_top" app:layout_constraintBottom_toTopOf="@id/alarm_alert_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alarm_alert_current_time" app:layout_constraintVertical_chainStyle="packed">
        <ImageView android:id="@id/alarm_weather_icon" android:focusable="false" android:visibility="gone" android:clickable="false" android:layout_width="@dimen/alarm_alert_weather_icon_size" android:layout_height="@dimen/alarm_alert_weather_icon_size" android:tint="@color/transparent" android:layout_marginEnd="@dimen/alarm_alert_current_date_marin_start" />
        <TextClock android:textSize="@dimen/alarm_current_date_text_size" android:textStyle="normal" android:textColor="@color/alert_text_time_date_color" android:id="@id/current_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:includeFontPadding="false" android:layout_alignBaseline="@id/alarm_weather_icon" android:fontFamily="@string/roboto_regular" android:layout_toEndOf="@id/alarm_weather_icon" android:format12Hour="@string/alarm_alert_date_format" android:format24Hour="@string/alarm_alert_date_format" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/alarm_title_text_size" android:textStyle="normal" android:textColor="@color/alert_text_color" android:ellipsize="end" android:gravity="center" android:id="@id/alarm_alert_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/alarm" android:maxLines="3" android:lines="3" android:includeFontPadding="false" android:fontFamily="@string/roboto_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/alarm_current_date_layout" app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>