<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/clock_alert_cover_height"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center|top" android:id="@id/alarm_alert_name_layout_cover" android:layout_width="@dimen/clock_alert_cover_width" android:layout_height="wrap_content" android:layout_marginTop="36.0dip">
        <TextView android:textSize="@dimen/alarm_title_text_size_cover" android:textStyle="normal" android:textColor="@color/cover_time_text_color" android:ellipsize="end" android:gravity="top" android:id="@id/alarm_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm" android:includeFontPadding="false" android:fontFamily="@string/roboto_regular" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom|center" android:id="@id/alarm_current_time_layout_cover" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-4.0dip" android:layout_below="@id/alarm_alert_name_layout_cover">
        <TextClock android:textSize="16.199982sp" android:textStyle="normal" android:textColor="@color/cover_time_text_color" android:id="@id/alarm_alert_current_time_ampm_kor_cover" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@string/roboto_light" android:layout_marginEnd="1.7999878dip" android:format12Hour="a" android:format24Hour="" />
        <TextClock android:textSize="@dimen/alarm_current_time_text_size_cover" android:textColor="@color/cover_time_text_color" android:gravity="center_vertical" android:id="@id/alarm_alert_current_time_cover" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_alert_instruction_comment" android:includeFontPadding="false" android:fontFamily="@string/roboto_light" android:format12Hour="@string/main_widget_12_hours_format" android:format24Hour="@string/clock_24_hours_format" />
        <TextClock android:textSize="@dimen/alarm_ampm_text_size" android:textStyle="normal" android:textColor="@color/cover_time_text_color" android:id="@id/alarm_alert_current_time_ampm_cover" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@string/roboto_light" android:layout_marginStart="1.7999878dip" android:format12Hour="a" android:format24Hour="" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-5.0dip" android:layout_below="@id/alarm_current_time_layout_cover">
        <TextClock android:textSize="@dimen/alarm_current_date_text_size_cover" android:typeface="normal" android:textStyle="normal" android:textColor="@color/cover_time_text_color" android:gravity="center" android:id="@id/current_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:includeFontPadding="false" android:fontFamily="@string/roboto_regular" android:format12Hour="@string/alarm_alert_date_format" android:format24Hour="@string/alarm_alert_date_format" />
    </LinearLayout>
    <com.sec.android.app.clockpackage.commonalert.view.AlertSlidingTab android:orientation="horizontal" android:id="@id/alarm_cc_tab_selector" android:tag="sview_cover_alert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/clock_alert_slidingtab_cover_margin_top" />
    <com.sec.android.app.clockpackage.alarm.ui.view.AlarmAlertSnoozeView android:layout_gravity="center_horizontal" android:id="@id/alarm_alert_snooze_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="150.0dip" app:layout_constraintBottom_toTopOf="@id/tab_selector" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_weight="2.0" />
</RelativeLayout>